--- a/passwordfinal.html
+++ b/passwordfinal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Password Protected Download</title>
+    <title>Password Protected Folder</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>Enter Password to Download</h1>
+    <h1>Enter Password to Access Folder</h1>
     <input type="password" id="password" placeholder="Enter Password">
     <button onclick="checkPassword()">Submit</button>
     <p id="message" style="color: red; font-weight: bold;"></p>
@@ -33,10 +33,7 @@
             const correctPassword = "030910";
 
             if (password === correctPassword) {
-                const link = document.createElement('a');
-                link.href = "C:\Users\gelbe\OneDrive\Desktop\4sof\TOPSECRET.zip"; //
-                link.download = "TOPSECRET.zip"; //
-                link.click();
+                window.location.href = "C:\Users\gelbe\OneDrive\Desktop\4sof\TOPSECRET";
             } else {
                 document.getElementById('message').textContent = "Incorrect password. Try again.";
             }
